bug related to date fixed

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <input type="text" id="address" placeholder="Address" required>
             <input type="tel" id="phone" placeholder="Phone" >
             <input type="text" id="billNo" placeholder="Bill No" required>
-            <input type="date" id="date" >
+            <input type="date" id="date" placeholder="Select Date">
             <input type="text" id="vehicleNo" placeholder="Vehicle No" required>
             <input type="text" id="vehicleType" placeholder="Vehicle Type" >
 
